llvm-gcc-4.2-2.9/gcc/testsuite/g++.apple/asm-block-67.C
/* { dg-do compile } */ 
/* { dg-options "-fasm-blocks" } */

int i = 1st;	/* { dg-error "invalid suffix.* on integer constant" } */
